--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  sensors_plus: ^3.0.3
   connectivity_plus: ^6.1.3
   firebase_core: ^2.30.0
   firebase_auth: ^4.19.0
