--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  animated_bottom_navigation_bar: ^1.4.0
+  url_launcher: ^6.3.1
+  timezone: ^0.10.0
   sensors_plus: ^6.1.1
   connectivity_plus: ^6.1.3
   firebase_core: ^2.30.0
@@ -39,7 +42,7 @@ dependencies:
   shared_preferences: ^2.2.2
   pedometer: ^4.0.1
   permission_handler: ^11.3.0
-  flutter_local_notifications: ^19.0.0
+  flutter_local_notifications:  ^19.0.0
   flutter:
     sdk: flutter
 
