--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: ^3.7.2
@@ -29,14 +29,17 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+# Provavelmente algumas estão desatualizadas, se alguem for alterar algo no projeto recomendo atenção a isso
 dependencies:
+  image_picker: ^1.1.2
+  firebase_storage: ^12.4.5
   animated_bottom_navigation_bar: ^1.4.0
   url_launcher: ^6.3.1
   timezone: ^0.10.0
   sensors_plus: ^6.1.1
   connectivity_plus: ^6.1.3
-  firebase_core: ^2.30.0
-  firebase_auth: ^4.19.0
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.2
   google_sign_in: ^6.2.1
   intl: ^0.18.1
   shared_preferences: ^2.2.2
