--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-# Miscellaneous
 *.class
 *.log
 *.pyc
@@ -11,17 +10,11 @@
 .svn/
 .swiftpm/
 migrate_working_dir/
-
-# IntelliJ related
 *.iml
 *.ipr
 *.iws
 .idea/
-
-# VSCode
 .vscode/
-
-# Flutter/Dart/Pub related
 **/doc/api/
 **/ios/Flutter/.last_build_id
 .dart_tool/
@@ -30,34 +23,30 @@ migrate_working_dir/
 .pub-cache/
 .pub/
 /build/
-
-# Symbolication related
 app.*.symbols
-
-# Obfuscation related
 app.*.map.json
-
-# Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
 /android/app/release
-
-# Firebase
 android/app/google-services.json
 ios/Runner/GoogleService-Info.plist
 lib/firebase_options.dart
-
-# Arquivos de ambiente e chaves
-.env
-*.keystore
-*.jks
-key.properties
-*.pem
-*.p12
-*.crt
-*.key
-
-# Arquivos de cache e sincronização
+**/*google-services*.json
+**/*.key
+**/*.pem
+**/*.cer
+**/*.crt
+**/*.pub
+**/*.priv
+**/*_rsa
+**/*_dsa
+**/*.keystore
+**/*.jks
+**/*.pfx
+**/*.p12
+**/key.properties
 .packages
 .flutter-versions
 .metadata
+**/.flutter-tool
+**/local.properties
