--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 # Provavelmente algumas estão desatualizadas, se alguem for alterar algo no projeto recomendo atenção a isso
 dependencies:
+  video_player: ^2.7.2
   animated_bottom_navigation_bar: ^1.4.0
   url_launcher: ^6.3.1
   timezone: ^0.10.0
@@ -72,6 +73,7 @@ dev_dependencies:
 flutter:
   assets:
     - assets/google_logo.png
+    - assets/videos/background.mp4
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
