--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 # Provavelmente algumas estão desatualizadas, se alguem for alterar algo no projeto recomendo atenção a isso
 dependencies:
+  flutter:
+    sdk: flutter
+  flutter_localizations:
+    sdk: flutter    # Fornece localizações padrão do Flutter :contentReference[oaicite:0]{index=0}
+  intl: ^0.19.0      # Biblioteca Dart para i18n/l10n :contentReference[oaicite:1]{index=1}
+
   video_player: ^2.7.2
   animated_bottom_navigation_bar: ^1.4.0
   url_launcher: ^6.3.1
@@ -40,23 +46,23 @@ dependencies:
   firebase_core: ^3.13.0
   firebase_auth: ^5.5.2
   google_sign_in: ^6.2.1
-  intl: ^0.18.1
   shared_preferences: ^2.2.2
   pedometer: ^4.0.1
   permission_handler: ^11.3.0
-  flutter_local_notifications:  ^19.0.0
-  flutter:
+  flutter_local_notifications: ^19.0.0
+
+dev_dependencies:
+  flutter_test:
     sdk: flutter
+  intl_utils: ^2.8.10 # Gera 'AppLocalizations' a partir dos ARB :contentReference[oaicite:2]{index=2}
+
+
 
 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
-
-dev_dependencies:
-  flutter_test:
-    sdk: flutter
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
@@ -78,6 +84,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   # assets:
